Commit changes in the 10-June

--- a/src/app/modules/author-nav/author-nav.component.scss
+++ b/src/app/modules/author-nav/author-nav.component.scss
@@ -75,6 +75,7 @@
   font-family: "League Spartan";
   font-size: 16px;
   font-style: normal;
+  cursor: pointer;
   font-weight: 400;
   line-height: normal;
 }
@@ -195,30 +196,39 @@
 //Notifications
 .notification-card {
   display: flex;
-    width: 226px;
-    padding: 21px 20px 20px 20px;
-    gap: 10px;
-    border-radius: 10px;
-    height: 244px;
-    scrollbar-width: thin;
-    scrollbar-color: #a426d1 transparent;
-    overflow-y: auto;
-    border: 1px solid #e9adff;
-    background: #fff;
-    color: #000;
-    font-family: "League Spartan";
-    font-size: 13px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    cursor: pointer;
+  width: 251px;
+  padding: 9px 5px 7px 11px;
+  gap: 10px;
+  border-radius: 10px;
+  height: 200px;
+  scrollbar-width: thin;
+  scrollbar-color: #a426d1 transparent;
+  overflow-y: auto;
+  border: 1px solid #e9adff;
+  background: #fff;
+  color: #000;
+  font-family: "League Spartan";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
 }
 
 .notification-message:hover {
   color: #a426d1;
   cursor: pointer;
-  font-weight: 500;
-  font-size: 16px;
+  font-weight: 400;
+  font-size: 15px;
+}
+
+.notification-message {
+  color: #000000;
+  cursor: pointer;
+  font-weight: 400;
+  padding-right: 30px;
+  margin-bottom: 0px;
+  font-size: 13px;
 }
 
 .notification-head {
@@ -236,7 +246,10 @@
 
 .notification-arrow {
   margin-left: 11px;
+  position: absolute;
   margin-top: 10px;
+  right: 10px;
+  float: right;
 }
 
 .notification-position{
@@ -253,4 +266,21 @@
   height: 100%;
   background-color: transparent;
   
+}
+
+
+
+.notification-icon {
+  position: relative;
+  display: inline-block;
+}
+
+.notification-dot {
+  position: absolute;
+  top: -16px;
+  right: -24px;
+  height: 10px;
+  width: 10px;
+  background-color: red;
+  border-radius: 50%;
 }
