--- a/src/app/modules/freelancer/freelancer.component.scss
+++ b/src/app/modules/freelancer/freelancer.component.scss
@@ -329,6 +329,7 @@
     font-family: "League Spartan";
     font-size: 20px;
     font-style: normal;
+    cursor: pointer;
     font-weight: 400;
     line-height: normal;
 }
