--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -6,11 +6,11 @@
       </div>
       <div class="col-xl-6 col-lg-7">
         <div class="rrpubkincenteralign1 float-end rrpubkinheadalign1">
-          <p class="rrpubkintxt1" (click)="navigateToProfile('freelancer')">
-            Find Talent
-          </p>
           <p class="rrpubkintxt1" (click)="navigateToProfile('author')">
-            Find Work
+            Find talent
+          </p>
+          <p class="rrpubkintxt1"  (click)="navigateToProfile('freelancer')">
+            Find work
           </p>
           <p class="rrpubkintxt1" routerLink="/WhatisPubKin?">Why us?</p>
           <p
@@ -36,7 +36,7 @@
     <div>
       <div class="rrpubkincenteralign1">
         <p class="kkelvatetxt">
-          Elevate Your <span class="kkelvatetxt1">Publishing Game</span>
+          Elevate your <span class="kkelvatetxt1">Publishing game</span>
         </p>
       </div>
       <div class="rrpubkincenteralign1">
@@ -50,10 +50,10 @@
           class="btn kkelvtxtbtn1 waves-effect waves-light"
           (click)="navigateToProfile('freelancer')"
         >
-          Find Work
+          Find work
         </button>
         <button class="btn kkelvtxtbtn2" (click)="navigateToProfile('author')">
-          Hire a Talent
+          Hire a talent
         </button>
       </div>
       <div class="container">
@@ -83,7 +83,7 @@
               </div>
               <div class="rrpubkincenteralign1">
                 <p class="rrchead">
-                  John Doe
+                  John doe
                   <img
                     src="./assets/Verified Check_.png"
                     alt="Pubkin"
@@ -129,7 +129,7 @@
         <div class="d-flex">
           <img src="./assets/shild.png" class="rrinrimg2" />
           <div>
-            <p class="rrnocosttxt1">Verified, 100% Secured</p>
+            <p class="rrnocosttxt1">Verified, 100% secured</p>
             <p class="rrnocosttxt2">
               All our Talents and Author are ID verified. No spam here!
             </p>
@@ -138,7 +138,7 @@
         <div class="d-flex">
           <img src="./assets/earn.png" class="rrinrimg3" />
           <div>
-            <p class="rrnocosttxt1">Best Earnings, Best returns</p>
+            <p class="rrnocosttxt1">Best earnings, Best returns</p>
             <p class="rrnocosttxt2">
               We have lowest transaction rates meaning you will receive the
               highest returns
@@ -153,7 +153,7 @@
             class="btn kkelvtxtbtn2"
             (click)="navigateToProfile('author')"
           >
-            Hire a Talent
+            Hire a talent
           </button>
         </div>
       </div>
@@ -161,8 +161,8 @@
   </div>
 
   <div class="container">
-    <p class="kkfitltxt">Find Talent by Category</p>
-    <p *ngIf="!hide" (click)="hide1()" class="kkbrtx">See All</p>
+    <p class="kkfitltxt">Find talent by category</p>
+    <p *ngIf="!hide" (click)="hide1()" class="kkbrtx">See all</p>
     <p *ngIf="hide" (click)="hide1()" class="kkbrtx">Collapse</p>
   </div>
 
@@ -178,7 +178,7 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Graphic Designer
+            Graphic designer
             <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
@@ -186,7 +186,7 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Template Designer
+            Template designer
             <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
@@ -194,7 +194,7 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Cover Designer <img src="./assets/cardtbtn.png" class="rrcatimg1" />
+            Cover designer <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
       </div>
@@ -206,14 +206,14 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Copy Editor <img src="./assets/cardtbtn.png" class="rrcatimg1" />
+            Copy editor <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
       </div>
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Language Editor
+            Language editor
             <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
@@ -221,14 +221,14 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Content Writer <img src="./assets/cardtbtn.png" class="rrcatimg1" />
+            Content writer <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
       </div>
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Quality Controller
+            Quality controller
             <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
@@ -241,7 +241,7 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            Quality Assurance
+            Quality assurance
             <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
@@ -249,7 +249,7 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            eBook Developer
+            eBook developer
             <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
@@ -257,7 +257,7 @@
       <div class="col-3">
         <div class="rrpubkincenteralign2 rrftcatalign1">
           <p class="rrcattxt1">
-            XML Specialist <img src="./assets/cardtbtn.png" class="rrcatimg1" />
+            XML specialist <img src="./assets/cardtbtn.png" class="rrcatimg1" />
           </p>
         </div>
       </div>
@@ -343,7 +343,7 @@
   </div>
 
   <div class="container">
-    <p class="rrkkwktltxt">Works from our Talents</p>
+    <p class="rrkkwktltxt">Works from our talents</p>
   </div>
 
   <div class="container rrallpronameal1">
@@ -476,24 +476,24 @@
     <div class="row">
       <div class="col-3">
         <div>
-          <p class="rrforclientsheadtxt1">For Authors</p>
-          <p class="rrforclientstxt2">How to Hire</p>
-          <p class="rrforclientstxt2">Services Offered</p>
-          <p class="rrforclientstxt2">Hiring Process</p>
-          <p class="rrforclientstxt2">Contact Information</p>
-          <p class="rrforclientstxt2">Top Categories</p>
-          <p class="rrforclientstxt2">Freelancer Success Stories</p>
-          <p class="rrforclientstxt2">Resource Center</p>
-          <p class="rrforclientstxt2">Community Forums</p>
+          <p class="rrforclientsheadtxt1">For authors</p>
+          <p class="rrforclientstxt2">How to hire</p>
+          <p class="rrforclientstxt2">Services offered</p>
+          <p class="rrforclientstxt2">Hiring process</p>
+          <p class="rrforclientstxt2">Contact information</p>
+          <p class="rrforclientstxt2">Top categories</p>
+          <p class="rrforclientstxt2">Freelancer success stories</p>
+          <p class="rrforclientstxt2">Resource center</p>
+          <p class="rrforclientstxt2">Community forums</p>
         </div>
       </div>
       <div class="col-3">
         <div class="rrpubkincenteralign1">
           <div>
-            <p class="rrforclientsheadtxt1">For Freelancers</p>
-            <p class="rrforclientstxt2">How to Find Work</p>
-            <p class="rrforclientstxt2">Apply for Skills</p>
-            <p class="rrforclientstxt2">Exclusive resources Freelancer Plus</p>
+            <p class="rrforclientsheadtxt1">For freelancers</p>
+            <p class="rrforclientstxt2">How to find work</p>
+            <p class="rrforclientstxt2">Apply for skills</p>
+            <p class="rrforclientstxt2">Exclusive resources freelancer plus</p>
             <!-- <p class="rrforclientstxt2">Lorem Ipsum</p>
             <p class="rrforclientstxt2">Lorem Ipsum</p> -->
           </div>
@@ -505,7 +505,7 @@
             <p class="rrforclientsheadtxt1">Resources</p>
             <p class="rrforclientstxt2">Help & Support</p>
             <p class="rrforclientstxt2">Resources</p>
-            <p class="rrforclientstxt2">Upwork Reviews</p>
+            <p class="rrforclientstxt2">Upwork reviews</p>
             <p class="rrforclientstxt2">Blog</p>
           </div>
         </div>
@@ -518,19 +518,19 @@
               class="rrforclientstxt2"
               (click)="scrollToTop(); navigateToPubkin('whatispubkin')"
             >
-              What is PubKin?
+              What is pubkin?
             </p>
             <p
               class="rrforclientstxt2"
               (click)="scrollToTop(); navigateToPubkin('objectives')"
             >
-              Objectives for PubKin
+              Objectives for pubkin
             </p>
             <p
               class="rrforclientstxt2"
               (click)="scrollToTop(); navigateToPubkin('services')"
             >
-              Services for PubKin
+              Services for pubkin
             </p>
           </div>
         </div>
