--- a/src/app/modules/setup-profile/setup-profile.component.html
+++ b/src/app/modules/setup-profile/setup-profile.component.html
@@ -403,7 +403,7 @@
             <p class="kkhdptag1">phone</p>
             <p class="kkhdptag2">+91 {{UserData[0].phoneNumber}}</p>
             <p class="kkhdptag1">Address</p>
-            <p class="kkhdptag2">{{UserData[0].country}}</p>
+            <p class="kkhdptag2">{{UserData[0].nationality}}</p>
           </div>
           <p class="kkclsacnt">Close Pubkin Account</p>
         </div>
@@ -466,7 +466,7 @@
                 </div>
                 <div class="mb-3 modalinputpersonal">
                   <label class="form-label projtitlevv">Address</label>
-                  <input class="form-control" type="text" id="country" name="country" [(ngModel)]="UserData[0].country">
+                  <input class="form-control" type="text" id="nationality" name="nationality" [(ngModel)]="UserData[0].nationality">
                 </div>
                 <!-- <div class="mb-3">
                   <label class="form-label projtitlevv">Description</label> -->
