--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -276,7 +276,7 @@
                
                 <p *ngIf="errorMessage !== ''" class="error-message" style="color:#A426D1;">{{"*"+ errorMessage }}</p>
                 <div class="flx">
-                    <button class="btnfr1" type="submit" (click)="loginButton();Userlogin()"><span>Login</span></button>
+                    <button class="btnfr1" type="submit" (click)="loginButton();"><span>Login</span></button>
                 </div>
                 <p class="meme1">Or</p>
                 <div class="flx" >
