--- a/src/app/modules/view-freelancers/view-freelancers.component.scss
+++ b/src/app/modules/view-freelancers/view-freelancers.component.scss
@@ -29,6 +29,7 @@ cursor: pointer;
 }
 .ddis { 
     color: #0F0F0F;
+    cursor: pointer;
     font-family: League Spartan;
     font-size: 20px;
     font-style: normal;
