--- a/src/app/modules/accept-request/accept-request.component.scss
+++ b/src/app/modules/accept-request/accept-request.component.scss
@@ -53,6 +53,7 @@ $pumaincolor:#A426D1;
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
+    cursor: pointer;
     line-height: normal;
     padding: 4px 16px 4px 16px;
 }
@@ -1002,6 +1003,7 @@ margin-left: 47px;
         font-size: 20px;
         font-style: normal;
         font-weight: 600;
+        cursor: pointer;
         line-height: normal;
         padding: 4px 16px 4px 16px;
     }
