--- a/src/app/modules/comments/comments.component.html
+++ b/src/app/modules/comments/comments.component.html
@@ -85,8 +85,11 @@
               </button>
             </span>
             <span *ngIf="User[0].role == 'author'" class="examplerework">
-              <button class="btn kkjbdtbtn2" (click)="showViewedWork()">
+              <button class="btn kkjbdtbtn2" (click)="showViewedWork()" *ngIf="jobPost.status === 'Ongoing'">
                 Rework Needed
+              </button>
+              <button class="btn kkjbdtbtn2" (click)="showViewedWork()" *ngIf="jobPost.status === 'completed'">
+                View Files
               </button>
               <button
                 class="btn kkjbdtbtn1"
@@ -105,7 +108,17 @@
     <!-- List the Comments -->
     <div class="container text-center pb-5">
       <p class="kkjbdls text-start mt-3">Comments</p>
-      <div class="kkcmdbx1">
+      <div *ngIf="comments === null" class="text-muted mt-3">
+        Loading comments...
+      </div>
+    
+      <!-- Error Message -->
+      <div *ngIf="comments !== null && comments.length === 0" class="text-danger mt-3">
+        Failed to load comments. Please try again later.
+      </div>
+    
+      <div class="kkcmdbx1" *ngIf="comments !== null && comments.length > 0">
+      <!-- <div class="kkcmdbx1"> -->
         <div class="container">
           <div class="row">
             <div class="col-8">
@@ -134,22 +147,23 @@
                   *ngFor="let comment of comments; let i = index"
                 >
                   <li class="kkcmdtx3" *ngIf="jobPost.id == comment.jobId">
-                    <div class="container img-fluid mt-3">
+                    <div class="container img-fluid mt-3" *ngIf="comment.fileName !== 'undefined'">
                       <a
                         [href]="comment.fileUrl"
                         target="_blank"
                         download
                         class="no-underline"
                       >
-                        <p class="imageShows">
+                        <p class="imageShows" >
                           {{ i + 1 }}. {{ comment.fileName }}
                         </p>
                       </a>
                       <hr />
-                      <p *ngIf="!comment.FileUrl === null">
+                      <!-- <p *ngIf="comment.fileName === 'undefined'">
                         No image available
-                      </p>
+                      </p> -->
                     </div>
+                                   
                   </li>
                 </ul>
               </div>
@@ -310,8 +324,7 @@
             <br />
             <div
               class="d-flex justify-content-center"
-              style="padding-bottom: 31px"
-            >
+              style="padding-bottom: 31px">
               <button type="submit" class="btn subbut">Submit Work</button>
             </div>
           </div>
@@ -452,51 +465,46 @@
           <button type="button" class="btn kkkbtnbk" data-bs-dismiss="modal">
             Back
           </button>
+
+          <form #updateForm="ngForm" (ngSubmit)="onSubmitStatus(updateForm)" >
+            <div *ngIf="selectedStatus">
+            <input type="hidden" id="id" name="id" [(ngModel)]="selectedStatus.id">
+            <input type="hidden" id="status" name="status" [(ngModel)]="appliedService.applyData.status">
+            <input type="hidden" id="postBy" name="postBy" [(ngModel)]="selectedStatus.postBy">
+            <input type="hidden" id="jobId" name="jobId" [(ngModel)]="selectedStatus.jobId">
+            <input type="hidden" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="selectedStatus.jobUniqueId">
+          </div>
+            <button type="submit" class="d-none">Accept Offer</button>
+          </form>
           <form
             #jobUpdateForm="ngForm"
-            (ngSubmit)="onSubmitJobStatus(jobUpdateForm)"
-          >
-            <input type="hidden" id="id" name="id" [(ngModel)]="jobPost.id" />
-            <input
-              type="hidden"
-              id="id"
-              name="id"
-              [(ngModel)]="jobPosts[0].id"
-            />
+            (ngSubmit)="onSubmitJobStatus(jobUpdateForm)">
+            <div *ngIf="selectedStatus">
+            <input type="hidden" id="id" name="id" [(ngModel)]="selectedStatus.jobId" />
+            </div>
             <input
               type="hidden"
               id="status"
               name="status"
-              [(ngModel)]="jobPosts[0].status"
+              [(ngModel)]="jobservice.jobData.status"
             />
-            <input
-              type="hidden"
-              id="postBy"
-              name="postBy"
-              [(ngModel)]="jobPosts[0].postBy"
-            />
-            <input
-              type="hidden"
-              id="jobId"
-              name="jobId"
-              [(ngModel)]="jobPosts[0].jobId"
-            />
-            <input
-              type="hidden"
-              id="jobUniqueId"
-              name="jobUniqueId"
-              [(ngModel)]="jobPosts[0].jobUniqueId"
-            />
+           
             <button
               type="button"
-              class="btn kkkbtncn"
+              class="btn "
               type="submit"
-              data-bs-dismiss="modal"
-              aria-label="Close"
             >
               Confirm
             </button>
           </form>
+          <!-- </div> -->
+          <button
+          type="button"
+          class="kkkbtncn"
+          (click)="submitBothForms();"
+        >
+          Confirm
+        </button>
         </div>
       </div>
     </div>
@@ -576,10 +584,11 @@
         </div>
       </div>
       <div class="col-4">
-        <div class="box2">
-          <p class="hed">Submit For Payment</p>
+        <div class="box3">
+          <p class="hed" *ngIf="jobPost.status === 'Ongoing'">Submit For Payment</p>
+          <p class="hed" *ngIf="jobPost.status === 'completed'">Job is completed</p>
           <hr class="codu2" />
-          <ul>
+          <ul *ngIf="jobPost.status === 'Ongoing'">
             <li class="subtex">
               Please check if all your requirements are completed
             </li>
@@ -587,19 +596,34 @@
               Once approved project is completed there will be no rework
             </li>
           </ul>
+          <ul *ngIf="jobPost.status === 'completed'">
+            <div   *ngFor=" let Apply of applies;">
+            <li class="subtex" *ngIf=" Apply.jobUniqueId === jobPost.jobUniqueId">
+              This job is completed by a {{Apply.userEmail}}. You paid the  {{Apply.biddingRate}} for this freelancer.
+            </li>
+          </div>
+          </ul>
           <div
             class="d-flex justify-content-center"
             style="padding-bottom: 31px"
+            *ngFor=" let Apply of applies;"
           >
-            <button
+          <div *ngIf=" Apply.jobUniqueId === jobPost.jobUniqueId">
+            <button *ngIf="jobPost.status === 'Ongoing'"
               class="btn subbut"
               data-bs-toggle="modal"
+              (click)="selectForStatus(Apply)"
               data-bs-target="#exampleModal5"
-              (click)="ChangeStatus()"
-            >
+               > 
               Mark as completed
             </button>
+            <button *ngIf="jobPost.status === 'completed'"
+              class="btn subbut"
+               > 
+              This job is completed
+            </button>
           </div>
+        </div>
         </div>
       </div>
     </div>
@@ -607,14 +631,6 @@
 </div>
 
 
-<!-- <div>
-  <p *ngIf="fileNames.length > 0">Selected files:</p>
-  <ul>
-    <li *ngFor="let fileName of fileNames; let i = index">
-      {{ fileName }}
-      <button (click)="removeFile(i)">Remove</button>
-    </li>
-  </ul>
-  <input #fileInput type="file" (change)="onFileSelected($event)" multiple>
-  <button (click)="onSubmit()">Upload</button>
-</div> -->
+
+<button (click)="sendNotification();sendNotifications();">Trigger the Notification</button>
+<button (click)="sendSubmitNotification();sendSubmitNotifications();">Work File  Notification</button>
