--- a/src/app/modules/comments/comments.component.scss
+++ b/src/app/modules/comments/comments.component.scss
@@ -610,13 +610,17 @@
     font-size: 20px;
     font-style: normal;
     font-weight: 300;
+    padding-right: 112px;
+    text-align: left;    
 }
+
 .kkcmdtx1{
     color: #1C1C1C;
 font-family: "League Spartan";
 font-size: 20px;
 font-style: normal;
 font-weight: 400;
+width: 72px;
 }
 
 .commentdateshows{
@@ -690,6 +694,14 @@ ul {
     width: 100%;
     height: 452px;
 
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 2px solid #C1C1C1;
+  }
+
+  .box3{
+    width: 100%;
+    height: 369px;
     flex-shrink: 0;
     border-radius: 16px;
     border: 2px solid #C1C1C1;
@@ -1059,11 +1071,20 @@ padding-left: 10px;
   }
   .box2{
     width: 100%;
-    height: auto;
+    height: 426px;
     flex-shrink: 0;
     border-radius: 16px;
     border: 2px solid #C1C1C1;
   }
+
+    .box3{
+    width: 100%;
+    height: 369px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 2px solid #C1C1C1;
+  }
+  
   
   .codu1,.codu2{
       margin-top: 10px;
