--- a/src/app/modules/freelancernav/freelancernav.component.html
+++ b/src/app/modules/freelancernav/freelancernav.component.html
@@ -81,6 +81,9 @@
       <a class="kkfrnavse" style="text-decoration: none;">Reports</a>
     </div>
     <div class="col-1">
+      <div class="notification-icon">
+        <span class="notification-dot" *ngIf="showDotIcon"></span>
+      </div>
       <img class="bell" src="../assets/bell.png" (click)="showNotification();">
     </div>
     <div class="col-1">
@@ -140,15 +143,32 @@
   <div class="container position-relative">
   <div class="notification-card notification-position" (click)="$event.stopPropagation()" >
         <div >
-              <div  *ngFor="let notification of notifications">
+          <div>
+      
+            <div *ngFor="let notification of userNotifications">
+              <div class="notification-head">
+                <p class="notification-message">{{notification.notification}}</p>
+                <svg class="notification-arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="16" viewBox="0 0 12 8" fill="none">
+                  <path d="M11.3536 4.35355C11.5488 4.15829 11.5488 3.84171 11.3536 3.64645L8.17157 0.464466C7.97631 0.269204 7.65973 0.269204 7.46447 0.464466C7.2692 0.659728 7.2692 0.976311 7.46447 1.17157L10.2929 4L7.46447 6.82843C7.2692 7.02369 7.2692 7.34027 7.46447 7.53553C7.65973 7.7308 7.97631 7.7308 8.17157 7.53553L11.3536 4.35355ZM0 4.5H11V3.5H0V4.5Z" fill="#A426D1"/>
+                </svg>
+              </div>
+              
+            </div>
+          </div>
+          <div class="notification-head">
+            <p class="notification-message">Welcome to our's pubkin family</p>
+            </div>
+              <!-- <div  *ngFor="let notification of notifications">
+        
                   <div class="notification-head" *ngIf="notification.userId == User[0].id">
+         
                       <p class="notification-message">  {{notification.notification}}</p>
                   
                       <svg class="notification-arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="16" viewBox="0 0 12 8" fill="none">
                         <path d="M11.3536 4.35355C11.5488 4.15829 11.5488 3.84171 11.3536 3.64645L8.17157 0.464466C7.97631 0.269204 7.65973 0.269204 7.46447 0.464466C7.2692 0.659728 7.2692 0.976311 7.46447 1.17157L10.2929 4L7.46447 6.82843C7.2692 7.02369 7.2692 7.34027 7.46447 7.53553C7.65973 7.7308 7.97631 7.7308 8.17157 7.53553L11.3536 4.35355ZM0 4.5H11V3.5H0V4.5Z" fill="#A426D1"/>
                       </svg>
                   </div>      
-              </div>
+              </div> -->
         </div>
   </div>
   </div>
