update the code

--- a/src/app/modules/apply-now/apply-now.component.html
+++ b/src/app/modules/apply-now/apply-now.component.html
@@ -292,7 +292,7 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
           <div class="col-4">
             <p class="rate1">
               Add Your Rate<br />
-              <span class="cont1">Lorem Ipsum Dolor</span>
+              <span class="cont1">Specify your rates</span>
             </p>
           </div>
           <div class="col-5"></div>
@@ -347,7 +347,7 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
           <div class="col-4">
             <p class="rate1">
               2% Platform Fee <br />
-              <span class="cont1">Lorem Ipsum Dolor</span>
+              <span class="cont1">Small service fee</span>
             </p>
           </div>
           <div class="col-5"></div>
@@ -404,7 +404,7 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
           <div class="col-4">
             <p class="rate1">
               Payment You’ll get after tax <br />
-              <span class="cont1">Lorem Ipsum Dolor</span>
+              <span class="cont1">Receive net payment</span>
             </p>
           </div>
           <div class="col-5"></div>
@@ -463,13 +463,13 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
         class="text-decoration-underline termsand"
         data-bs-toggle="modal"
         data-bs-target="#myModal"
-        >Terms of Use.</span
+        >terms of use.</span
       > </span
     ><br />
-    <button class="btn aplbtn" [disabled]="applyForm.invalid" type="submit" (click)="notifyNow();">Apply Now</button>
+    <button class="btn aplbtn" [disabled]="applyForm.invalid" type="submit" (click)="notifyNow();">Apply now</button>
   </form>
   <button class="sabtn" data-bs-toggle="modal" data-bs-target="#savejob">
-    Save as Draft
+    Save as draft
   </button>
   <br /><br /><br /><br />
 </div>
@@ -481,8 +481,8 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
       <!-- Modal Header -->
       <div class="modal-header">
         <p class="modal-title kkhead">
-          Non-Disclosure Agreement (NDA) between Author and Freelancer using
-          PubKin
+          Non-disclosure agreement (NDA) between author and freelancer using
+          pubkin
         </p>
       </div>
       <!-- Modal body -->
@@ -498,12 +498,12 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
         </ul>
         <ul class="list-unstyled float-end px-5 text-start termssidecont">
           <li>
-            This Non-Disclosure Agreement (the "Agreement") is entered into by
+            This Non-disclosure agreement (the "Agreement") is entered into by
             and between:
           </li>
           <br>
           <li class="text-decoration-underline termsandconditioncont">
-            Disclosing Party:
+            Disclosing party:
           </li>
           <li>{{ JobPost.createdBy }}</li>
           <li>
@@ -519,7 +519,7 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
           <!-- <li>[City, State, ZIP Code]</li><br> -->
           <br />
           <li class="text-decoration-underline termsandconditioncont">
-            Receiving Party:
+            Receiving party:
           </li>
           <li>{{ UserData[0].firstName }} {{ UserData[0].lastName }}</li>
           <li>{{ UserData[0].country }}</li>
@@ -530,59 +530,59 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
             Purpose:
           </li>
           <li class="liscontentvv">
-            The Parties desire to explore the possibility of collaboration on
+            The parties desire to explore the possibility of collaboration on
             publishing services through PubKin (the "Platform"). In connection
-            with this collaboration, the Disclosing Party may disclose certain
-            confidential information to the Receiving Party.
+            with this collaboration, the disclosing party may disclose certain
+            confidential information to the receiving party.
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
-            Confidential Information:
+            Confidential information:
           </li>
           <li class="liscontentvv">
-            Confidential Information shall include any data or information, oral
-            or written, disclosed by the Disclosing Party to the Receiving Party
+            Confidential information shall include any data or information, oral
+            or written, disclosed by the disclosing party to the receiving party
             related to the publishing services on PubKin. This includes but is
             not limited to manuscripts, creative works, proprietary information,
             business strategies, and any other information deemed confidential
-            by the Disclosing Party.
+            by the disclosing party.
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
             Obligations
           </li>
-          <li class="liscontentvv">The Receiving Party agrees to:</li>
+          <li class="liscontentvv">The receiving party agrees to:</li>
           <li class="liscontentvv">
-            Maintain the confidentiality of all Confidential Information.
+            Maintain the confidentiality of all confidential information.
           </li>
           <li class="liscontentvv">
-            Use the Confidential Information solely for the purpose of
+            Use the confidential information solely for the purpose of
             collaboration on PubKin publishing services. Not disclose,
-            reproduce, or distribute the Confidential Information to any third
-            party without prior written consent from the Disclosing Party.
+            reproduce, or distribute the confidential information to any third
+            party without prior written consent from the disclosing party.
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
             Exceptions:
           </li>
           <li class="liscontentvv">
-            The obligations set forth in this Agreement shall not apply to
+            The obligations set forth in this agreement shall not apply to
             information that:
           </li>
           <li class="liscontentvv">
             Is or becomes publicly available without breach of this Agreement.
-            Is independently developed by the Receiving Party without reference
-            to the Confidential Information. Is rightfully received by the
-            Receiving Party from a third party without restriction.
+            Is independently developed by the receiving party without reference
+            to the confidential information. Is rightfully received by the
+            receiving party from a third party without restriction.
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
-            Payment Terms:
+            Payment terms:
           </li>
           <li class="liscontentvv">
             All payment terms and arrangements between the Author and Freelancer
             shall be agreed upon separately and are not covered by this
-            Agreement.
+            agreement.
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
@@ -599,29 +599,29 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
             Duration:
           </li>
           <li class="liscontentvv">
-            This Agreement shall commence on the Effective Date and shall remain
+            This agreement shall commence on the effective date and shall remain
             in effect for
             <span style="color: #a426d1"
               >{{ JobPost.projectEndDate }}
               {{ JobPost.durationOfProject }}</span
             >
             unless terminated earlier by mutual written agreement of the
-            Parties.
+            parties.
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
             Termination:
           </li>
           <li class="liscontentvv">
-            Either Party may terminate this Agreement upon written notice if the
-            other Party breaches any material provision of this Agreement.
+            Either party may terminate this Agreement upon written notice if the
+            other party breaches any material provision of this agreement.
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
-            Governing Law:
+            Governing law:
           </li>
           <li class="liscontentvv">
-            This Agreement shall be governed by and construed in accordance with
+            This agreement shall be governed by and construed in accordance with
             the laws of
             <span >
               <span *ngIf="JobPost.currency === 'INR'" style="color: #a426d1">India</span>
@@ -637,14 +637,14 @@ Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendiss
           </li>
           <br />
           <li class="text-decoration-underline termsandconditioncont">
-            Entire Agreement:
+            Entire agreement:
           </li>
           <li class="liscontentvv">
-            This Agreement constitutes the entire understanding between the
+            This agreement constitutes the entire understanding between the
             Parties and supersedes all prior discussions, negotiations, and
             agreements, whether oral or written.<br />
-            IN WITNESS WHEREOF, the Parties hereto have executed this
-            Non-Disclosure Agreement as of the Effective Date.
+            In witness whereof, the Parties hereto have executed this
+            Non-Disclosure agreement as of the effective date.
           </li>
           <br />
           <li
