--- a/src/app/modules/authprofile/authprofile.component.html
+++ b/src/app/modules/authprofile/authprofile.component.html
@@ -30,7 +30,7 @@
                 <img mat-dialog-close class="close" src="../assets/x letter_.png" alt="close">
                 <br>
                 <p class=" prohead1">Complete your Profile</p>
-                <p class="prodes1">Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendisse</p>
+                <p class="prodes1">Please fill in the appropriate details in the fields below</p>
                 <div class="mrt">
                     <div class="container-fluid prode" style="cursor: pointer;">
                         <div class="row">
