--- a/src/app/modules/completed/completed.component.html
+++ b/src/app/modules/completed/completed.component.html
@@ -46,7 +46,7 @@
                 <p class="postedname">posted by <span style="color: #A426D1;">{{Apply.postBy}}</span></p>
               </div>
               <div class="col-4">
-                <button class="viewJobbtn" (click)="showJobDetails(Apply.jobId)">View</button>
+                <button class="viewJobbtn" (click)="showJobDetails(Apply.jobUniqueId)">View</button>
               </div>
               <hr class="applyhr">
             </div>
