--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -12,7 +12,13 @@
 
 
 @media only screen and (min-width:1201px) {
-
+.box1{
+  width: 17%;
+  height: 300px;
+  background-color: #A426D1;
+  position: absolute;
+  border-radius: 20px;
+}
 
 
   .rrdescarddes1 {
