--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="dtview">
-  <div class="container rrheaderalign">
+  <div class="container-fluid rrheaderalign">
     <div class="row">
-      <div class="col-xl-6 col-lg-5">
+      <div class="col-xl-6 col-lg-5" style="padding-left: 100px;"> 
         <img src="./assets/logo.png" class="rrlogoimg" routerLink="/" />
       </div>
-      <div class="col-xl-6 col-lg-7">
+      <div class="col-xl-6 col-lg-7 pr-3"  style="padding-right: 120px;">
         <div class="rrpubkincenteralign1 float-end rrpubkinheadalign1">
           <p class="rrpubkintxt1" (click)="navigateToProfile('author')">
             Find talent
